# openvpn3

./: .clang-format  .dir-locals.el-example  .gitignore  .pre-commit-config.yaml  .travis.yml  CLA.md  CLA.rst  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Dolphin  Jenkinsfile  LICENSE.md  LICENSE.rst  README.md  README.rst  appveyor.yml  build  compile-options  exports  exports-linux  exports-mac  lib-versions  link-options  renovate.json  setpath  sources  test.cpp  vars  vars-android  vars-android-dbg  vars-arm-cross  vars-ios  vars-ios-dbg  vars-iossim  vars-iossim-dbg  vars-linux  vars-linux-dbg  vars-linux-openssl  vars-mac  (+6 more)
.github/workflows/: coverity-scan.yml  doxygen.yml  msbuild.yml
.travis/: build-check.sh  build-deps.sh
boost/: build-boost
client/: CMakeLists.txt  ovpncli.cpp  ovpncli.hpp  ovpncli.i
clilib/: build-ios  build-linux  build-mac  build-mac-shared  build-mac-static  make-dist
cliobjc/: ovpncli.h  ovpncli.mm
cmake/: CMakeLists.txt.in  dlgoogletest.cmake  findcoredeps.cmake  findswigdeps.cmake  ovpn-doxygen.cmake
doc/: core.md  developer_guide.md  openvpn-protocol-extensions.txt  webauth.md
javacli/: .gitignore  Client.java  ClientEventReceiver.java  ClientImpl.java  Main.java  OpenVPNClientThread.java  build-android  build-android-community  build-android-polar  build-android-pt  build-linux  build-linux-polar  ovpncli.cpp  ovpncli.hpp  ovpncli.i  ovpncli.ipp
javacli/android/: cpu.cpp  jellybean_hack.cpp
lz4/: build-lz4
lzo/: build-lzo
minicrypto/: build-minicrypto
omi/: openvpn.cpp
openssl/: build-openssl
openvpn/acceptor/: base.hpp  namedpipe.hpp  tcp.hpp  unix.hpp
openvpn/addr/: addrlist.hpp  addrpair.hpp  addrspacesplit.hpp  cidrmap.hpp  ip.hpp  iperr.hpp  ipv4.hpp  ipv6.hpp  macaddr.hpp  pool.hpp  quoteip.hpp  randaddr.hpp  range.hpp  regex.hpp  regex_static.hpp  route.hpp  routeinv.hpp
openvpn/apple/: iosactiveiface.hpp  maclife.hpp  macsleep.hpp  macver.hpp  reach.hpp  reachable.hpp  runloop.hpp  scdynstore.hpp  ver.hpp
openvpn/applecrypto/: evpcipher.hpp  evpcommon.hpp  evpdigest.hpp  evphmac.hpp
openvpn/asio/: asioboundsock.hpp  asiocontext.hpp  asioerr.hpp  asiopolysock.hpp  asiosignal.hpp  asiostop.hpp  asiowork.hpp  scoped_asio_stream.hpp
openvpn/auth/: authcert.hpp  authcreds.hpp  cr.hpp  validatecreds.hpp
openvpn/aws/: awsca.hpp  awscreds.hpp  awshttp.hpp  awspc.hpp  awsrest.hpp  awsroute.hpp
openvpn/buffer/: asiobuf.hpp  bufclamp.hpp  bufcomplete.hpp  bufcomposed.hpp  buffer.hpp  buffmt.hpp  bufhex.hpp  bufip.hpp  buflimit.hpp  buflineiter.hpp  buflist.hpp  bufread.hpp  bufstatic.hpp  bufstr.hpp  bufstream.hpp  lz4.hpp  memq.hpp  safestr.hpp  zlib.hpp
openvpn/client/: acc_certcheck.hpp  async_resolve.hpp  cliconnect.hpp  cliconstants.hpp  clicreds.hpp  cliemuexr.hpp  clievent.hpp  clihalt.hpp  clilife.hpp  cliopt.hpp  cliopthelper.hpp  cliproto.hpp  dns.hpp  dns_options.hpp  ipverflags.hpp  optfilt.hpp  remotelist.hpp  rgopt.hpp
openvpn/common/: abort.hpp  action.hpp  actionthread.hpp  addr.hpp  appversion.hpp  arch.hpp  argv.hpp  arraysize.hpp  asioboundsock.hpp  asiocontext.hpp  asiodispatch.hpp  asioerr.hpp  asiopolysock.hpp  asiosignal.hpp  asiostop.hpp  asiotimer.hpp  asiowork.hpp  asyncsleep.hpp  autoreset.hpp  backref.hpp  base64.hpp  bidir.hpp  bigmutex.hpp  binprefix.hpp  boostrand.hpp  circ_list.hpp  clamp.hpp  clamp_typerange.hpp  cleanup.hpp  complog.hpp  core.hpp  count.hpp  daemon.hpp  demangle.hpp  destruct.hpp  dispatch.hpp  endian.hpp  endian64.hpp  enumdir.hpp  environ.hpp  (+113 more)
openvpn/compress/: compnull.hpp  compress.hpp  compstub.hpp  lz4.hpp  lzo.hpp  lzoasym.hpp  lzoasym_impl.hpp  lzoselect.hpp  lzostub.hpp  snappy.hpp
openvpn/crypto/: bs64_data_limit.hpp  cipher.hpp  crypto.hpp  crypto_aead.hpp  crypto_aead_epoch.hpp  crypto_chm.hpp  cryptoalgs.hpp  cryptobase.hpp  cryptochoose.hpp  cryptodc.hpp  cryptodcsel.hpp  data_epoch.cpp  data_epoch.hpp  decrypt.hpp  decrypt_chm.hpp  definitions.hpp  digest.hpp  digestapi.hpp  encrypt.hpp  encrypt_chm.hpp  frame.hpp  hashstr.hpp  hmac.hpp  ovpnhmac.hpp  packet_id.hpp  packet_id_aead.hpp  packet_id_control.hpp  packet_id_data.hpp  protostats.hpp  selftest.hpp  static_key.hpp  tls_crypt.hpp  tls_crypt_v2.hpp
openvpn/omi/: CMakeLists.txt  omi.hpp  omiclient.sln  omiclient.vcxproj  omiclient.vcxproj.filters  openvpn.cpp
polarssl/: CMakeLists.txt  README.txt  android.cmake  build-mini-openssl  build-polarssl  build-polarssl-patch  config.h  polar-openssl.patch  polarssl-minicrypto.patch  polarssl.patch  ref  ref-aesni
scripts/: build  git-pre-commit-clangformat.sh  snapshot  version
snappy/: build-snappy
test/: unused
test/ovpncli/: .gitignore  CMakeLists.txt  README.txt  cli.cpp  go  gok  main.cpp
test/ovpncli/include/: ovpncli.hpp
test/ovpncli/src/: main.cpp  ovpncli.cpp
test/unittests/: .gitignore  CMakeLists.txt  CMakeLists.txt.in  README-comp.txt  README-proto-tests.md  README-proto-tests.rst  README.md  core_tests.cpp  test_acc.cpp  test_acc_certcheck.cpp  test_addrlist.cpp  test_alignment.cpp  test_b64.cpp  test_buffer.cpp  test_buffer_ip.cpp  test_capture.cpp  test_clamp_typerange.cpp  test_cleanup.cpp  test_cliopt.cpp  test_common.h  test_comp.cpp  test_continuation.cpp  test_cpu_time.cpp  test_crypto.cpp  test_crypto_hashstr.cpp  test_csum.cpp  test_dns.cpp  test_format.cpp  test_generators.h  test_generators.hpp  test_header_deps.cpp  test_headredact.cpp  test_helper.hpp  test_hostport.cpp  test_http_proxy.cpp  test_icmp6csum.cpp  test_intrinsic_type.cpp  test_ip.cpp  test_iphelper.cpp  test_log.cpp  (+53 more)
vars/: android-sdk-path  setpath  vars-android  vars-android-a7a  vars-android-a7a-dbg  vars-android-a8a  vars-android-a8a-dbg  vars-android-dbg  vars-android-x86  vars-ios  vars-ios-dbg  vars-iossim  vars-iossim-dbg  vars-linux  vars-linux-clang  vars-linux-clang-dbg  vars-linux-dbg  vars-linux-libcpp  vars-msys  vars-osx  vars-osx-dbg  vars-osx64  vars-osx64-dbg
win/: .gitignore  build.py  buildep.py  lib_versions.py  ovpn3-core.sln  ovpn3-core.vcxproj  ovpn3-core.vcxproj.filters  parms.py  utils.py
(+524 files in other folders)
